trunk/Archive2/cf/8ab7a2528cdad8/output
main.cpp: In function 'int FF(class_A*)':
main.cpp:5:9: error: 'int class_A::Test' is private
     int Test;
         ^
main.cpp:13:22: error: within this context
     return nClass_A->Test;
                      ^
